--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/cn262114/Documents/eclipse-workspace/jars/jaunt0.9.9.8/jaunt0.9.9.8.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/cn262114/Documents/eclipse-workspace/jars/jaunt0.9.9.8/javadocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
