--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-dev</artifactId>
+			<version>3.7.12</version>
+		</dependency>
+		<dependency>
 			<groupId>org.lightcouch</groupId>
 			<artifactId>lightcouch</artifactId>
 			<version>0.1.6</version>
