--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-dev</artifactId>
-			<version>3.7.12</version>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.lightcouch</groupId>
