updated gitignore to ignore svm files

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@
 .metadata/*
 .metadata
 ./data/svm/
-./data/svm/*
+./data/svm/*.train
+*.train
+*.test
+*.model
+*.output
 
 # Compiled source #
 *.class
