--- a/src/main/java/couchdb_test.properties
+++ b/src/main/java/couchdb_test.properties
@@ -1,5 +1,6 @@
 ### Required 
-couchdb.name=test_so_qdb
+couchdb.name=temp_test_db
+#test_so_qdb
 couchdb.createdb.if-not-exist=true 
 
 # The protocol: http | https
