--- a/src/main/java/couchdb_test.properties
+++ b/src/main/java/couchdb_test.properties
@@ -1,5 +1,5 @@
 ### Required 
-couchdb.name=test_db_fw30_qt100
+couchdb.name=test_db_fw100_qt200
 #test_so_qdb
 couchdb.createdb.if-not-exist=true 
 
