--- a/src/main/java/couchdb_test.properties
+++ b/src/main/java/couchdb_test.properties
@@ -1,5 +1,5 @@
 ### Required 
-couchdb.name=test_so_qdb
+couchdb.name=test_db_fw100_qt200
 couchdb.createdb.if-not-exist=true 
 
 # The protocol: http | https
